# JEPA_CMU_MoCap

./: .gitignore  README.md  history.md  pyproject.toml  requirements.txt
configs/: config.yaml
src/: diag.py  utils.py
src/data/: bvh_parser.py  cmu_download.py  dataset.py
src/eval/: linear_probe.py  plot_diagnostics.py  render.py  rollout.py
src/models/: components.py  geometry.py  jepa.py  kinematics.py
src/training/: losses.py  train.py  train_decoder.py
